<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center">


    <ImageView
        android:id="@+id/lockdownchefmain"
        android:layout_width="334dp"
        android:layout_height="209dp"
        android:layout_gravity="center"
        android:src="@mipmap/lockdown" />

    <TextView
        android:id="@+id/foodforlifemain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FOOD FOR LIFE"
        android:textColor="#FF32B8C2"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:layout_gravity="center"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lEditEmail"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lEditPassword"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:background="#FF32B8C2"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/btnLogin"/>


    <Button
        android:id="@+id/btnLinkToRegisterScreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@null"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:textColor="#FF32B8C2"
        android:textSize="15sp" />

</LinearLayout>
