<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center">

    <TextView
        android:id="@+id/editprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EDIT PROFILE"
        android:textColor="#FF32B8C2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editName"
        android:hint="@string/hint_name"
        android:padding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editEmail"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editPassword"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="EDIT"
        android:layout_marginTop="20dp"
        android:background="#FF32B8C2"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/Update"/>


</LinearLayout>
